<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressBar_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"/>

    <View
        android:id="@+id/wallet_item_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_wallet_item_card_background"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="@id/left_guideLine"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/small_android_imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:elevation="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_android_icon"
        app:layout_constraintStart_toStartOf="@id/left_guideLine"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/coin_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="4dp"
        android:text="@string/coin"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/small_android_imageView"
        app:layout_constraintTop_toTopOf="@id/small_android_imageView"
        app:layout_constraintBottom_toTopOf="@id/xnc_bag_title_textView"/>
    <TextView
        android:id="@+id/coin_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        app:layout_constraintTop_toTopOf="@id/small_android_imageView"
        tools:text="9,102,619"/>

    <TextView
        android:id="@+id/xnc_bag_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:text="@string/xnc_bag"
        app:layout_constraintTop_toBottomOf="@id/coin_title_textView"
        app:layout_constraintStart_toStartOf="@id/coin_title_textView"
        app:layout_constraintBottom_toBottomOf="@id/small_android_imageView"/>
    <TextView
        android:id="@+id/xnc_bag_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="@id/xnc_bag_title_textView"
        app:layout_constraintBottom_toBottomOf="@id/xnc_bag_title_textView"
        app:layout_constraintEnd_toEndOf="@id/coin_value_textView"
        tools:text="123"/>

    <ProgressBar
        android:id="@+id/wallet_item_progressbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/layer_list_progress_bar"
        app:layout_constraintTop_toBottomOf="@id/small_android_imageView"
        app:layout_constraintStart_toStartOf="@id/small_android_imageView"
        app:layout_constraintEnd_toEndOf="@id/progressBar_guideLine"
        tools:progress="60"/>
    <TextView
        android:id="@+id/days_remaining_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/small_android_imageView"
        app:layout_constraintEnd_toEndOf="@id/coin_value_textView"
        tools:text="Expire in\n156 days"/>

    <View
        android:id="@+id/rewards_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:background="@drawable/shape_reward_box_background"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/small_android_imageView"
        app:layout_constraintEnd_toEndOf="@id/coin_value_textView"
        app:layout_constraintTop_toBottomOf="@id/wallet_item_progressbar"
        app:layout_constraintBottom_toBottomOf="@id/space_view"/>

    <TextView
        android:id="@+id/interaction_reward_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:elevation="4dp"
        android:text="@string/interaction_rewards"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/wallet_item_progressbar"
        app:layout_constraintStart_toStartOf="@id/small_android_imageView"/>
    <TextView
        android:id="@+id/interaction_reward_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/coin_value_textView"
        app:layout_constraintTop_toTopOf="@id/interaction_reward_title_textView"
        tools:text="+1.849"/>

    <TextView
        android:id="@+id/social_reward_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:elevation="4dp"
        android:text="@string/social_rewards"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/interaction_reward_title_textView"
        app:layout_constraintStart_toStartOf="@id/interaction_reward_title_textView"/>
    <TextView
        android:id="@+id/social_reward_value_textView"
        android:layout_width="wrap_content"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/social_reward_title_textView"
        app:layout_constraintEnd_toEndOf="@id/interaction_reward_value_textView"
        tools:text="+1,681.213"/>

    <TextView
        android:id="@+id/revenue_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:text="@string/revenue"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/social_reward_title_textView"
        app:layout_constraintStart_toStartOf="@id/interaction_reward_title_textView"/>
    <TextView
        android:id="@+id/revenue_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/revenue_title_textView"
        app:layout_constraintEnd_toEndOf="@id/interaction_reward_value_textView"
        tools:text="+1,793.729"/>

    <View
        android:id="@+id/space_view"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/revenue_title_textView"
        app:layout_constraintStart_toStartOf="@id/interaction_reward_title_textView"
        app:layout_constraintEnd_toEndOf="@id/interaction_reward_value_textView"/>

    <TextView
        android:id="@+id/more_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:text="@string/more"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/green80BCB7"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/space_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/wallet_item_count_textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:minWidth="19dp"
        android:elevation="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:background="@drawable/shape_count_background"
        android:text="@string/fake_wallet_item_tab_count"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>